# mosec

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: README.md  analysis-model.md  appsec-architecture.md  appsec-backlog.md  appsec-p0-backlog.md  appsec-roadmap.md  audit-sketch.md  ci-cd-sketch.md  cli-contract.md  cli-reference.md  collaboration-sketch.md  command-system.md  configuration.md  data-schema.md  development-setup.md  development.md  false-positive-sketch.md  foundation-pack.md  getting-started.md  manual-override-sketch.md  mobile-analysis.md  mvp-spec.md  policy-sketch.md  pr-comment-sketch.md  reporting.md  roadmap.md  rule-spec.md  rules-and-findings.md  suppression-review-sketch.md  terminal-ui.md  test-strategy.md  troubleshooting.md  tui-command-list.md  versioning.md
docs/adrs/: 0001-python-cli-first-rust-core-later.md  0002-config-and-rule-packs-in-toml.md  0003-json-sarif-first-reporting.md  0004-stable-data-models-for-findings-and-rules.md  0005-baseline-and-suppression-as-first-class-workflow-concepts.md  0006-fixture-driven-scanner-development.md  README.md
fixtures/: README.md
fixtures/baseline/: baseline.json
rust/: Cargo.toml  README.md
tests/: test_baseline_suppressions.py  test_commands.py  test_config_loader.py  test_detection.py  test_detectors.py  test_ingestion.py  test_manual_overrides.py  test_parsing.py  test_policy.py  test_reporting_views.py  test_reporting_workflow.py  test_rule_browser.py  test_rule_loader.py  test_smoke.py  test_sources.py  test_state.py  test_taint.py  test_tui.py
(+50 files in other folders)
